fix: blog.html, blog.css, tag containerand other

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <header class="header conteiner">
+    <header class="header container">
       <div>
         <a href="index.html" class="logo header__logo">
           <img src="img/logo.png" alt="logo" />
@@ -45,10 +45,10 @@
     <!-- / header-->
 
     <!-- MAIN -->
-    <main>
-      <section class="blog conteiner">
-        <h2 class="blog__heading">blog</h2>
-        <nav class="breadcrumb conteiner">
+    <main class="container">
+      <section class="blog">
+        <h1 class="blog__heading">blog</h1>
+        <nav class="breadcrumb">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
               <a href="#" class="breadcrumb__link">Home</a>
@@ -65,9 +65,9 @@
             <a href="#" class="blog__link">
               <img src="img/lego_1.jpg" alt="lego" class="blog__img" />
               <p class="blog__date">23rd August 2018</p>
-              <h3 class="blog__title">
+              <h2 class="blog__title">
                 Top 5 fastest growing it service companies in philly
-              </h3>
+              </h2>
               <p class="blog__text">
                 Direct Line Development’s Team is excited to announce that we
                 received UpCity’s 2019 Local Excellence Award! This prestigious
@@ -80,7 +80,7 @@
             <a href="#" class="blog__link">
               <img src="img/dog.jpg" alt="dog" class="blog__img" />
               <p class="blog__date">23rd August 2018</p>
-              <h3 class="blog__title">Best financial</h3>
+              <h2 class="blog__title">Best financial</h2>
               <p class="blog__text">
                 Direct Line Development is honored to be recognized as one of
                 the Top 100 Fastest Growing Companies 2019 in Philadelphia,
@@ -92,10 +92,10 @@
             <a href="#" class="blog__link">
               <img src="img/train.jpg" alt="train" class="blog__img" />
               <p class="blog__date">23rd August 2018</p>
-              <h3 class="blog__title">
+              <h2 class="blog__title">
                 Company logo or brand identity: which one is more important?
                 brand identity
-              </h3>
+              </h2>
               <p class="blog__text">
                 To survive in the world of digital marketing, you need to keep
                 up with the latest SEO trends. Here are our simple, but
@@ -107,7 +107,7 @@
             <a href="#" class="blog__link">
               <img src="img/cosmo.jpg" alt="cosmoman" class="blog__img" />
               <p class="blog__date">23rd August 2018</p>
-              <h3 class="blog__title">Best financial</h3>
+              <h2 class="blog__title">Best financial</h2>
               <p class="blog__text">
                 Direct Line Development is honored to be recognized as one of
                 the Top 100 Fastest Growing Companies 2019 in Philadelphia,
@@ -119,10 +119,10 @@
             <a href="#" class="blog__link">
               <img src="img/toy_girl.jpg" alt="girl" class="blog__img" />
               <p class="blog__date">23rd August 2018</p>
-              <h3 class="blog__title">
+              <h2 class="blog__title">
                 Company logo or brand identity: which one is more important?
                 brand identity
-              </h3>
+              </h2>
               <p class="blog__text">
                 To survive in the world of digital marketing, you need to keep
                 up with the latest SEO trends. Here are our simple, but
@@ -134,9 +134,9 @@
             <a href="#" class="blog__link">
               <img src="img/rock.jpg" alt="rocks" class="blog__img" />
               <p class="blog__date">23rd August 2018</p>
-              <h3 class="blog__title">
+              <h2 class="blog__title">
                 Top 5 fastest growing it service companies in philly
-              </h3>
+              </h2>
               <p class="blog__text">
                 Direct Line Development’s Team is excited to announce that we
                 received UpCity’s 2019 Local Excellence Award! This prestigious
@@ -146,7 +146,7 @@
             </a>
           </li>
         </ul>
-        <div class="blog__slider conteiner">
+        <div class="blog__slider">
           <svg
             width="18"
             height="30"
@@ -186,7 +186,7 @@
     <!-- /MAIN -->
 
     <footer class="footer">
-      <section class="footer__info conteiner">
+      <section class="footer__info container">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
           <ul class="footer__list undoted">
@@ -368,7 +368,7 @@
         </div>
         <!-- /connect -->
       </section>
-      <div class="footer__other conteiner">
+      <div class="footer__other container">
         <div class="footer__wrap">
           <p class="footer__text">Company Rating</p>
           <div class="footer__wrap-stars">
