--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <header class="header conteiner">
+    <header class="header container">
       <div>
         <a href="index.html" class="logo header__logo">
           <img src="img/logo.png" alt="logo" />
@@ -46,7 +46,7 @@
 
     <!-- MAIN -->
     <main>
-      <section class="products conteiner">
+      <section class="products container">
         <h2 class="products__heading">Category Products</h2>
         <nav class="breadcrumb">
           <ul class="breadcrumb__list undoted">
@@ -129,7 +129,7 @@
     <!-- /MAIN -->
 
     <footer class="footer">
-      <section class="footer__info conteiner">
+      <section class="footer__info container">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
           <ul class="footer__list undoted">
@@ -311,7 +311,7 @@
         </div>
         <!-- /connect -->
       </section>
-      <div class="footer__other conteiner">
+      <div class="footer__other container">
         <div class="footer__wrap">
           <p class="footer__text">Company Rating</p>
           <div class="footer__wrap-stars">
