--- a/toy.html
+++ b/toy.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <header class="header conteiner">
+    <header class="header container">
       <div>
         <a href="index.html" class="logo header__logo">
           <img src="img/logo.png" alt="logo" />
@@ -47,8 +47,8 @@
     <!-- MAIN -->
     <main>
       <section class="toy">
-        <h2 class="toy__heading conteiner">Toy for kids</h2>
-        <nav class="breadcrumb conteiner">
+        <h2 class="toy__heading container">Toy for kids</h2>
+        <nav class="breadcrumb container">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
               <a href="#" class="breadcrumb__link">Home</a>
@@ -64,7 +64,7 @@
           </ul>
         </nav>
         <div class="toy__choice choice">
-          <div class="toy__wrapper conteiner">
+          <div class="toy__wrapper container">
             <ul class="choice__list undoted">
               <li class="choice__item">
                 <h2 class="choice__title">Cost</h2>
@@ -130,7 +130,7 @@
             </ul>
           </div>
         </div>
-        <ul class="toy__prod undoted conteiner">
+        <ul class="toy__prod undoted container">
           <li class="toy__item toy__shark">
             <a href="#" target="_blank" class="toy__link">
               <img src="img/sharky.png" alt="product foto" class="toy__img" />
@@ -182,7 +182,7 @@
             </a>
           </li>
         </ul>
-        <div class="toy__slider conteiner">
+        <div class="toy__slider container">
           <svg
             width="18"
             height="30"
@@ -223,7 +223,7 @@
     <!-- /MAIN -->
 
     <footer class="footer">
-      <section class="footer__info conteiner">
+      <section class="footer__info container">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
           <ul class="footer__list undoted">
@@ -405,7 +405,7 @@
         </div>
         <!-- /connect -->
       </section>
-      <div class="footer__other conteiner">
+      <div class="footer__other container">
         <div class="footer__wrap">
           <p class="footer__text">Company Rating</p>
           <div class="footer__wrap-stars">
