--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <header class="header conteiner">
+    <header class="header container">
       <div>
         <a href="index.html" class="logo header__logo">
           <img src="img/logo.png" alt="logo" />
@@ -45,8 +45,8 @@
     <!-- / header-->
 
     <!-- MAIN -->
-    <main>
-      <section class="banner conteiner">
+    <main class="container">
+      <section class="banner">
         <div class="banner__screen">
           <h1 class="banner__heading">THE OOH NOO COLLECTION</h1>
           <h3 class="banner__title">Designed in Slovenia</h3>
@@ -67,7 +67,7 @@
         <!-- <div class="banner__img"></div> -->
       </section>
       <!-- /banner -->
-      <section class="products conteiner">
+      <section class="products">
         <h2 class="products__heading">Category Products</h2>
         <ul class="products__list undoted">
           <li class="products__item">
@@ -139,7 +139,7 @@
         </div>
       </section>
       <!-- /products -->
-      <section class="delivery conteiner">
+      <section class="delivery">
         <div class="delivery__innerpic">
           <img
             src="img/foto_girl.jpg"
@@ -178,7 +178,7 @@
         </div>
       </section>
       <!-- /delivery -->
-      <section class="partners conteiner">
+      <section class="partners">
         <h2 class="partners__heading hidden">Our partners</h2>
         <ul class="partners__list undoted">
           <li class="partners__item partners__mail">
@@ -216,7 +216,7 @@
         </ul>
       </section>
       <!-- /partners -->
-      <section class="info conteiner">
+      <section class="info">
         <div class="design">
           <div class="design__wrap">
             <h2 class="design__heading">Design Life Kids</h2>
@@ -254,7 +254,7 @@
     <!-- /MAIN -->
 
     <footer class="footer">
-      <section class="footer__info conteiner">
+      <section class="footer__info container">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
           <ul class="footer__list undoted">
@@ -436,7 +436,7 @@
         </div>
         <!-- /connect -->
       </section>
-      <div class="footer__other conteiner">
+      <div class="footer__other container">
         <div class="footer__wrap">
           <p class="footer__text">Company Rating</p>
           <div class="footer__wrap-stars">
