fix position in index.html

--- a/contact_us.html
+++ b/contact_us.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DLK Products</title>
+    <title>Your Favorite Store DLK</title>
     <link rel="stylesheet" href="css/common.css" class="css" />
-    <link rel="stylesheet" href="css/products.css" class="css" />
+    <link rel="stylesheet" href="css/style.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,87 +45,8 @@
     <!-- / header-->
 
     <!-- MAIN -->
-    <main>
-      <section class="products container">
-        <h2 class="products__heading">Category Products</h2>
-        <nav class="breadcrumb">
-          <ul class="breadcrumb__list undoted">
-            <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Home</a>
-            </li>
-            <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link breadcrumb__active">
-                Catalog
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="products__list undoted">
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link products__kids">
-              <div class="products__names products__long">
-                <p class="products__name">apparel</p>
-                <p class="products__name">kids</p>
-              </div>
-            </a>
-          </li>
-          <li class="products__item">
-            <a
-              href="#"
-              target="_blank"
-              class="products__link products__holiday"
-            >
-              <div class="products__names products__long">
-                <p class="products__name">holiday</p>
-                <p class="products__name">shop</p>
-              </div>
-            </a>
-          </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link products__toys">
-              <div class="products__names products__short">
-                <p class="products__name">accessories</p>
-              </div>
-            </a>
-          </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link products__sale">
-              <div class="products__names products__short">
-                <p class="products__name">sale</p>
-              </div>
-            </a>
-          </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link products__adults">
-              <div class="products__names products__long">
-                <p class="products__name">apparel</p>
-                <p class="products__name">adults</p>
-              </div>
-            </a>
-          </li>
-        </ul>
-        <div class="products__desc">
-          <h2 class="products__heading">Product Description</h2>
-          <p class="products__text">
-            Interactive doll Zapf Creation Baby Born Sister can drink from a
-            bottle and almost really cry. You can even bathe her, just like a
-            little sister.
-          </p>
-          <p class="products__text">
-            A toy with a height of 43 cm bends its knees, the head rotates, it
-            can stand upright. Such a doll will be an excellent choice for a
-            gift for a girl from 4 years old.
-          </p>
-          <p class="products__text">
-            The set includes a miniature set of fashionable clothes, a
-            hairbrush, a bottle for water, a pair of hairpins and elastic bands
-            for hair, as well as two bracelets: one for the doll, the other for
-            her young mistress.
-          </p>
-        </div>
-      </section>
-      <!-- /products -->
-    </main>
+    <main></main>
+
     <!-- /MAIN -->
 
     <footer class="footer">
