--- a/toy.html
+++ b/toy.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,700;1,400;1,700&family=Montserrat:wght@300;700&family=Open+Sans:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,700;1,400;1,700&family=Montserrat:wght@300;600;700&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
     <!-- MAIN -->
     <main>
       <section class="toy">
-        <h2 class="toy__heading container">Toy for kids</h2>
+        <h1 class="toy__heading container">Toy for kids</h1>
         <nav class="breadcrumb container">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
