--- a/index.html
+++ b/index.html
@@ -536,5 +536,60 @@
       </div>
       <!-- /footer__other-->
     </footer>
+    <!-- MAIN -->
+
+    <section class="popup">
+      <div class="popup__field">
+        <form action="#" class="popup__form">
+          <fieldset>
+            <div class="label-wrapper">
+              <label for="input-name">Name</label>
+              <input
+                type="text"
+                id="input-name"
+                class="contact__input"
+                placeholder="Ivan Ivanov"
+              />
+            </div>
+          </fieldset>
+          <fieldset class="field_2_column">
+            <div class="label-wrapper">
+              <label for="input-phone">Phone</label>
+              <input
+                type="tel"
+                id="input-phone"
+                class="contact__input"
+                required
+              />
+            </div>
+            <div class="label-wrapper">
+              <label for="input-email">Email</label>
+              <input type="email" id="input-email" class="contact__input" />
+            </div>
+          </fieldset>
+          <fieldset>
+            <div class="label-wrapper">
+              <label for="input-email">Message</label>
+              <textarea name="" cols="3" rows="1"></textarea>
+            </div>
+          </fieldset>
+          <fieldset class="checkbox-wrap">
+            <div class="checkbox-list">
+              <input
+                type="checkbox"
+                id="check-cash"
+                class="checkbox-input"
+                disabled
+              />
+              <label for="check-cash" class="checkbox-label">
+                By clicking on the button, you consent to the processing of your
+                personal data
+              </label>
+            </div>
+          </fieldset>
+          <button class="button contact__button" type="submit">Submit</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
