--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
       <nav class="header__nav">
         <ul class="header__list undoted">
           <li class="header__item">
-            <a href="#" target="_blank" class="header__link">Blog</a>
+            <a href="blog.html" target="_blank" class="header__link">Blog</a>
           </li>
           <li class="header__item">
-            <a href="#" target="_blank" class="header__link">Catalog</a>
+            <a href="products.html" target="_blank" class="header__link"
+              >Catalog</a
+            >
           </li>
           <li class="header__item">
             <a href="#" target="_blank" class="header__link">About Us</a>
@@ -37,7 +39,9 @@
       <button class="header__btn">
         <img src="img/search.jpg" alt="search" class="btn-img" />
       </button>
-      <a href="#" class="header__button" target="_blank">contact us</a>
+      <a href="contact_us.html" class="header__button" target="_blank">
+        contact us
+      </a>
     </header>
     <!-- / header-->
 
