change products.html, products.css

--- a/contact_us.html
+++ b/contact_us.html
@@ -69,7 +69,7 @@
                   type="text"
                   id="input-name"
                   class="contact__input"
-                  placeholder="Ivan Ivanov"
+                  placeholder="Ivan Ivanov" required
                 />
               </div>
             </fieldset>
@@ -79,7 +79,7 @@
                 <input
                   type="tel"
                   id="input-phone"
-                  class="contact__input"
+                  class="contact__input" 
                   required
                 />
               </div>
@@ -98,11 +98,11 @@
               <div class="checkbox-list">
                 <input
                   type="checkbox"
-                  id="check-cash"
+                  id="check-submit"
                   class="checkbox-input"
-                  disabled
+                  
                 />
-                <label for="check-cash" class="checkbox-label">
+                <label for="check-submit" class="checkbox-label">
                   By clicking on the button, you consent to the processing of
                   your personal data
                 </label>
