--- a/products.html
+++ b/products.html
@@ -83,7 +83,22 @@
             </a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link products__toys">
+            <a
+              href="toy.html"
+              target="_blank"
+              class="products__link products__toys"
+            >
+              <div class="products__names products__short">
+                <p class="products__name">toys</p>
+              </div>
+            </a>
+          </li>
+          <li class="products__item">
+            <a
+              href="#"
+              target="_blank"
+              class="products__link products__accessories"
+            >
               <div class="products__names products__short">
                 <p class="products__name">accessories</p>
               </div>
@@ -106,7 +121,7 @@
           </li>
         </ul>
         <div class="products__desc">
-          <h2 class="products__heading">Product Description</h2>
+          <h2 class="products__title">Product Description</h2>
           <p class="products__text">
             Interactive doll Zapf Creation Baby Born Sister can drink from a
             bottle and almost really cry. You can even bathe her, just like a
