change toy,blog.html, toy, blog.css, common.css

--- a/blog.html
+++ b/blog.html
@@ -161,11 +161,12 @@
               stroke-width="4"
             />
           </svg>
-
-          <span class="blog__count blog__count-active">1</span>
+          <div class="blog__nums">
+            <span class="blog__count blog__count-active">1</span>
           <span class="blog__count">2</span>
           <span class="blog__count">3</span>
           <span class="blog__count">4</span>
+          </div>         
           <svg
             width="18"
             height="30"
