--- a/toy.html
+++ b/toy.html
@@ -182,7 +182,7 @@
             </a>
           </li>
         </ul>
-        <div class="toy__slider container">
+          <div class="blog__slider container">
           <svg
             width="18"
             height="30"
@@ -197,11 +197,12 @@
               stroke-width="4"
             />
           </svg>
-
-          <span class="toy__count toy__count-active">1</span>
-          <span class="toy__count">2</span>
-          <span class="toy__count">3</span>
-          <span class="toy__count">4</span>
+          <div class="blog__nums">
+            <span class="blog__count blog__count-active">1</span>
+          <span class="blog__count">2</span>
+          <span class="blog__count">3</span>
+          <span class="blog__count">4</span>
+          </div>         
           <svg
             width="18"
             height="30"
