change toy.html,toy.css, common.css

--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
     <!-- MAIN -->
 
     <section class="popup">
+      <h2 class="popup__title">PopUp</h2>
       <div class="popup__field">
         <form action="#" class="popup__form">
           <fieldset>
@@ -573,8 +574,13 @@
           </fieldset>
           <fieldset>
             <div class="label-wrapper">
-              <label for="input-email">Message</label>
-              <textarea name="" cols="3" rows="1"></textarea>
+              <label for="input-message">Message</label>
+              <textarea
+                name="message"
+                cols="3"
+                rows="1"
+                id="input-message"
+              ></textarea>
             </div>
           </fieldset>
           <fieldset class="checkbox-wrap">
