--- a/blog.html
+++ b/blog.html
@@ -21,13 +21,15 @@
           <img src="img/logo.png" alt="logo" />
         </a>
       </div>
-     <nav class="header__nav">
+      <nav class="header__nav">
         <ul class="header__list undoted">
           <li class="header__item">
             <a href="blog.html" target="_blank" class="header__link">Blog</a>
           </li>
           <li class="header__item">
-            <a href="products.html" target="_blank" class="header__link">Catalog</a>
+            <a href="products.html" target="_blank" class="header__link"
+              >Catalog</a
+            >
           </li>
           <li class="header__item">
             <a href="#" target="_blank" class="header__link">About Us</a>
@@ -37,11 +39,11 @@
       <button class="header__btn">
         <img src="img/search.jpg" alt="search" class="btn-img" />
       </button>
-       <a href="contact_us.html" class="header__button" target="_blank">
+      <a href="contact_us.html" class="header__button" target="_blank">
         contact us
       </a>
     </header>
-    </header>
+
     <!-- / header-->
 
     <!-- MAIN -->
@@ -146,43 +148,43 @@
             </a>
           </li>
         </ul>
-        <div class="blog__slider">
-          <svg
-            width="18"
-            height="30"
-            viewBox="0 0 18 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M16 2L3 15L16 28"
-              stroke="#1E0606"
-              stroke-opacity="0.12"
-              stroke-width="4"
-            />
-          </svg>
-          <div class="blog__nums">
-            <span class="blog__count blog__count-active">1</span>
-          <span class="blog__count">2</span>
-          <span class="blog__count">3</span>
-          <span class="blog__count">4</span>
-          </div>         
-          <svg
-            width="18"
-            height="30"
-            viewBox="0 0 18 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M2 2L15 15L2 28"
-              stroke="#1E0606"
-              stroke-opacity="0.12"
-              stroke-width="4"
-            />
-          </svg>
-        </div>
       </section>
+      <div class="page">
+        <svg
+          width="18"
+          height="30"
+          viewBox="0 0 18 30"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M16 2L3 15L16 28"
+            stroke="#1E0606"
+            stroke-opacity="0.12"
+            stroke-width="4"
+          />
+        </svg>
+        <div class="page__nums">
+          <span class="page__count page__count-active">1</span>
+          <span class="page__count">2</span>
+          <span class="page__count">3</span>
+          <span class="page__count">4</span>
+        </div>
+        <svg
+          width="18"
+          height="30"
+          viewBox="0 0 18 30"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M2 2L15 15L2 28"
+            stroke="#1E0606"
+            stroke-opacity="0.12"
+            stroke-width="4"
+          />
+        </svg>
+      </div>
     </main>
     <!-- /MAIN -->
 
