--- a/contact_us.html
+++ b/contact_us.html
@@ -21,13 +21,15 @@
           <img src="img/logo.png" alt="logo" />
         </a>
       </div>
-    <nav class="header__nav">
+      <nav class="header__nav">
         <ul class="header__list undoted">
           <li class="header__item">
             <a href="blog.html" target="_blank" class="header__link">Blog</a>
           </li>
           <li class="header__item">
-            <a href="products.html" target="_blank" class="header__link">Catalog</a>
+            <a href="products.html" target="_blank" class="header__link"
+              >Catalog</a
+            >
           </li>
           <li class="header__item">
             <a href="#" target="_blank" class="header__link">About Us</a>
@@ -41,7 +43,7 @@
         contact us
       </a>
     </header>
-    </header>
+
     <!-- / header-->
 
     <!-- MAIN -->
@@ -69,7 +71,8 @@
                   type="text"
                   id="input-name"
                   class="contact__input"
-                  placeholder="Ivan Ivanov" required
+                  placeholder="Ivan Ivanov"
+                  required
                 />
               </div>
             </fieldset>
@@ -79,7 +82,7 @@
                 <input
                   type="tel"
                   id="input-phone"
-                  class="contact__input" 
+                  class="contact__input"
                   required
                 />
               </div>
@@ -90,8 +93,13 @@
             </fieldset>
             <fieldset>
               <div class="label-wrapper">
-                <label for="input-email">Message</label>
-                <textarea name="" cols="3" rows="1"></textarea>
+                <label for="input-message">Message</label>
+                <textarea
+                  name="message"
+                  cols="3"
+                  rows="1"
+                  id="input-message"
+                ></textarea>
               </div>
             </fieldset>
             <fieldset class="checkbox-wrap">
@@ -100,7 +108,6 @@
                   type="checkbox"
                   id="check-submit"
                   class="checkbox-input"
-                  
                 />
                 <label for="check-submit" class="checkbox-label">
                   By clicking on the button, you consent to the processing of
