--- a/toy.html
+++ b/toy.html
@@ -27,7 +27,9 @@
             <a href="blog.html" target="_blank" class="header__link">Blog</a>
           </li>
           <li class="header__item">
-            <a href="products.html" target="_blank" class="header__link">Catalog</a>
+            <a href="products.html" target="_blank" class="header__link"
+              >Catalog</a
+            >
           </li>
           <li class="header__item">
             <a href="#" target="_blank" class="header__link">About Us</a>
@@ -37,11 +39,11 @@
       <button class="header__btn">
         <img src="img/search.jpg" alt="search" class="btn-img" />
       </button>
-        <a href="contact_us.html" class="header__button" target="_blank">
+      <a href="contact_us.html" class="header__button" target="_blank">
         contact us
       </a>
     </header>
-    </header>
+
     <!-- / header-->
 
     <!-- MAIN -->
@@ -65,69 +67,129 @@
         </nav>
         <div class="toy__choice choice">
           <div class="toy__wrapper container">
-            <ul class="choice__list undoted">
-              <li class="choice__item">
-                <h2 class="choice__title">Cost</h2>
-                <label class="choice__wrap">
-                  <input
-                    type="range"
-                    class="choice__range"
-                    min="0"
-                    max="500"
-                    value="50"
-                  />
-                  <span class="choice__digit-start">0</span>
-                  <span class="choice__digit-end">500</span>
-                </label>
-              </li>
-              <li class="choice__item">
-                <h2 class="choice__title">Color</h2>
-                <label class="choice__container">
-                  <input type="checkbox" checked="checked" />
-                  <span class="choice__checkmark">Black</span>
-                </label>
-                <label class="choice__container">
-                  <input type="checkbox" />
-                  <span class="choice__checkmark">Blue</span>
-                </label>
-                <label class="choice__container">
-                  <input type="checkbox" />
-                  <span class="choice__checkmark">Green</span>
-                </label>
-                <label class="choice__container">
-                  <input type="checkbox" />
-                  <span class="choice__checkmark">White</span>
-                </label>
-              </li>
-              <li class="choice__item">
-                <h2 class="choice__title">Delivery</h2>
-                <label class="choice__container">
-                  <input type="radio" />
-                  <span class="choice__checkmark">Free shipping</span>
-                </label>
-                <label class="choice__container">
-                  <input type="radio" />
-                  <span class="choice__checkmark">Fast shipping</span>
-                </label>
-              </li>
-              <li class="choice__item">
-                <h2 class="choice__title">Amount</h2>
-                <ul class="choice__sort undoted">
-                  <li class="choice__sort-min choice__sort-active">
-                    <a href="#" class="choice__btn choice__btn-active">0-5</a>
+            <form action="#" class="choice__form">
+              <fieldset class="field-range">
+                <div class="label-wrapper label-wrapper-range">
+                  <label for="range-input">Cost</label>
+                  <input type="range" id="range-input" min="0" max="500" />
+                </div>
+                <div class="range__period">
+                  <span class="range__num">0</span>
+                  <span class="range__num">500</span>
+                </div>
+              </fieldset>
+              <fieldset>
+                <legend>Color</legend>
+                <ul class="undoted checkbox-list">
+                  <li>
+                    <input
+                      type="checkbox"
+                      id="check-black"
+                      class="checkbox-input"
+                      checked
+                    />
+                    <label for="check-black" class="checkbox-label"
+                      >Black</label
+                    >
                   </li>
-                  <li class="choice__sort-middle">
-                    <a href="#" class="choice__btn">10-20</a>
+                  <li>
+                    <input
+                      type="checkbox"
+                      id="check-blue"
+                      class="checkbox-input"
+                    />
+                    <label for="check-blue" class="checkbox-label">Blue</label>
                   </li>
-                  <li class="choice__sort-max">
-                    <a href="#" class="choice__btn">20-50</a>
+                  <li>
+                    <input
+                      type="checkbox"
+                      id="check-green"
+                      class="checkbox-input"
+                    />
+                    <label for="check-green" class="checkbox-label"
+                      >Green</label
+                    >
+                  </li>
+                  <li>
+                    <input
+                      type="checkbox"
+                      id="check-white"
+                      class="checkbox-input"
+                    />
+                    <label for="check-white" class="checkbox-label"
+                      >White</label
+                    >
                   </li>
                 </ul>
-              </li>
-              <li class="choice__item">
-                <a href="#" target="_blank" class="button">Apply</a>
-              </li>
-            </ul>
+              </fieldset>
+              <fieldset>
+                <legend>Delivery</legend>
+                <ul class="undoted radio-list">
+                  <li>
+                    <input
+                      type="radio"
+                      id="radio-free"
+                      class="radio-input"
+                      name="shipping"
+                    />
+                    <label for="radio-free" class="radio-label"
+                      >Free shipping</label
+                    >
+                  </li>
+                  <li>
+                    <input
+                      type="radio"
+                      id="radio-fast"
+                      class="radio-input"
+                      name="shipping"
+                      checked
+                    />
+                    <label for="radio-fast" class="radio-label"
+                      >Fast shipping</label
+                    >
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="radio-limit">
+                <legend>Amount</legend>
+                <ul class="undoted radio-list radio-list-limit">
+                  <li>
+                    <input
+                      type="radio"
+                      id="radio-five"
+                      class="radio-input"
+                      name="amount"
+                      checked
+                    />
+                    <label for="radio-five" class="radio-label">0-5</label>
+                    <span class="radio__text">0-5</span>
+                  </li>
+                  <li>
+                    <input
+                      type="radio"
+                      id="radio-twenty"
+                      class="radio-input"
+                      name="amount"
+                    />
+                    <label for="radio-twenty" class="radio-label">
+                      10-20
+                    </label>
+                    <span class="radio__text">10-20</span>
+                  </li>
+                  <li>
+                    <input
+                      type="radio"
+                      id="radio-fifty"
+                      class="radio-input"
+                      name="amount"
+                    />
+                    <label for="radio-fifty" class="radio-label">20-50</label>
+                    <span class="radio__text">20-50</span>
+                  </li>
+                </ul>
+              </fieldset>
+              <button class="button choice__choice" type="submit">Apply</button>
+            </form>
           </div>
         </div>
         <ul class="toy__prod undoted container">
@@ -182,44 +244,44 @@
             </a>
           </li>
         </ul>
-          <div class="blog__slider container">
-          <svg
-            width="18"
-            height="30"
-            viewBox="0 0 18 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M16 2L3 15L16 28"
-              stroke="#1E0606"
-              stroke-opacity="0.12"
-              stroke-width="4"
-            />
-          </svg>
-          <div class="blog__nums">
-            <span class="blog__count blog__count-active">1</span>
-          <span class="blog__count">2</span>
-          <span class="blog__count">3</span>
-          <span class="blog__count">4</span>
-          </div>         
-          <svg
-            width="18"
-            height="30"
-            viewBox="0 0 18 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M2 2L15 15L2 28"
-              stroke="#1E0606"
-              stroke-opacity="0.12"
-              stroke-width="4"
-            />
-          </svg>
-        </div>
       </section>
       <!-- /products -->
+      <div class="page container">
+        <svg
+          width="18"
+          height="30"
+          viewBox="0 0 18 30"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M16 2L3 15L16 28"
+            stroke="#1E0606"
+            stroke-opacity="0.12"
+            stroke-width="4"
+          />
+        </svg>
+        <div class="page__nums">
+          <span class="page__count page__count-active">1</span>
+          <span class="page__count">2</span>
+          <span class="page__count">3</span>
+          <span class="page__count">4</span>
+        </div>
+        <svg
+          width="18"
+          height="30"
+          viewBox="0 0 18 30"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M2 2L15 15L2 28"
+            stroke="#1E0606"
+            stroke-opacity="0.12"
+            stroke-width="4"
+          />
+        </svg>
+      </div>
     </main>
     <!-- /MAIN -->
 
