--- a/index.html
+++ b/index.html
@@ -344,8 +344,18 @@
         <div class="footer__connect">
           <h4 class="footer__title">Connect</h4>
           <form action="#" class="footer__form">
-            <input type="text" placeholder="Email" class="footer__input" />
-            <button class="button">Join</button>
+            <fieldset class="footer__fieldset">
+              <div class="label-wrapper">
+                <label for="input-footer"></label>
+                <input
+                  type="email"
+                  placeholder="Email"
+                  class="footer__input"
+                  id="input-footer"
+                />
+              </div>
+              <button class="button">Join</button>
+            </fieldset>
           </form>
           <ul class="footer__icons icons undoted">
             <li class="icons__item">
@@ -542,10 +552,10 @@
     </footer>
     <!-- MAIN -->
 
-    <section class="popup">
-      <h2 class="popup__title">PopUp</h2>
-      <div class="popup__field">
-        <form action="#" class="popup__form">
+    <section class="popup contact">
+      <h2 class="popup__title contact__title">PopUp</h2>
+      <div class="popup__field contact__field">
+        <form action="#" class="contact__form">
           <fieldset>
             <div class="label-wrapper">
               <label for="input-name">Name</label>
@@ -557,7 +567,7 @@
               />
             </div>
           </fieldset>
-          <fieldset class="field_2_column">
+          <fieldset class="contact__field2column field_2_column">
             <div class="label-wrapper">
               <label for="input-phone">Phone</label>
               <input
