add hover&active&focus&:after/before for elem

--- a/products.html
+++ b/products.html
@@ -52,10 +52,13 @@
         <nav class="breadcrumb">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Home</a>
+              <a href="index.html" class="breadcrumb__link">Home</a>
             </li>
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link breadcrumb__link_active">
+              <a
+                href="products.html"
+                class="breadcrumb__link breadcrumb__link_active"
+              >
                 Catalog
               </a>
             </li>
