--- a/toy.html
+++ b/toy.html
@@ -53,10 +53,10 @@
         <nav class="breadcrumb container">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Home</a>
+              <a href="index.html" class="breadcrumb__link">Home</a>
             </li>
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Catalog</a>
+              <a href="products.html" class="breadcrumb__link">Catalog</a>
             </li>
             <li class="breadcrumb__item">
               <a href="#" class="breadcrumb__link breadcrumb__link_active">
@@ -161,7 +161,7 @@
                       name="amount"
                       checked
                     />
-                    <label for="radio-five" class="radio-label">0-5</label>
+                    <label for="radio-five" class="radio-label"></label>
                     <span class="radio__text">0-5</span>
                   </li>
                   <li>
@@ -171,9 +171,7 @@
                       class="radio-input"
                       name="amount"
                     />
-                    <label for="radio-twenty" class="radio-label">
-                      10-20
-                    </label>
+                    <label for="radio-twenty" class="radio-label"></label>
                     <span class="radio__text">10-20</span>
                   </li>
                   <li>
@@ -183,7 +181,7 @@
                       class="radio-input"
                       name="amount"
                     />
-                    <label for="radio-fifty" class="radio-label">20-50</label>
+                    <label for="radio-fifty" class="radio-label"></label>
                     <span class="radio__text">20-50</span>
                   </li>
                 </ul>
