--- a/blog.html
+++ b/blog.html
@@ -53,10 +53,12 @@
         <nav class="breadcrumb">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Home</a>
+              <a href="index.html" class="breadcrumb__link">Home</a>
             </li>
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link breadcrumb__link_active"
+              <a
+                href="blog.html"
+                class="breadcrumb__link breadcrumb__link_active"
                 >Blog</a
               >
             </li>
