--- a/contact_us.html
+++ b/contact_us.html
@@ -53,10 +53,13 @@
         <nav class="breadcrumb container">
           <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Home</a>
+              <a href="index.html" class="breadcrumb__link">Home</a>
             </li>
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link breadcrumb__link_active">
+              <a
+                href="contact_us.html"
+                class="breadcrumb__link breadcrumb__link_active"
+              >
                 Contact us
               </a>
             </li>
