--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <a href="#" target="_blank" class="footer__link">About Us</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link">Blog</a>
+              <a href="blog.html" target="_blank" class="footer__link">Blog</a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">
@@ -313,7 +313,9 @@
           <h4 class="footer__title">Customer Information</h4>
           <ul class="footer__list undoted">
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link">Contact Us</a>
+              <a href="contact_us.html" target="_blank" class="footer__link">
+                Contact Us
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">
