--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     />
   </head>
   <body>
-    <header class="header container">
+    <!-- <audio autoplay loop src="audio/Ferry Corsten-Tomorrow.mp3"></audio>
+    <header class="header container"> -->
       <div>
         <a href="index.html" class="logo header__logo">
           <img src="img/logo.png" alt="logo" />
@@ -262,13 +263,14 @@
               have flown by. It's simply magical.
             </p>
             <div class="contacts__map">
-              <a
-                href="https://www.google.ru/maps/place/Hayes+Valley,+%D0%A1%D0%B0%D0%BD-%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B8%D1%81%D0%BA%D0%BE,+%D0%9A%D0%B0%D0%BB%D0%B8%D1%84%D0%BE%D1%80%D0%BD%D0%B8%D1%8F+94102,+%D0%A1%D0%A8%D0%90/@37.7747213,-122.4297098,16z/data=!3m1!4b1!4m5!3m4!1s0x808580a196ede719:0x2fb5607634331f2f!8m2!3d37.7759073!4d-122.4245247"
-                target="_blank"
-                class="contacts__link"
-              >
-                <img src="img/map.png" alt="map" class="contacts__img" />
-              </a>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d25229.231104883824!2d-122.42533200000001!3d37.774713!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580a196ede719%3A0x2fb5607634331f2f!2zSGF5ZXMgVmFsbGV5LCDQodCw0L0t0KTRgNCw0L3RhtC40YHQutC-LCDQmtCw0LvQuNGE0L7RgNC90LjRjyA5NDEwMiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1630467085685!5m2!1sru!2sru"
+                width="483"
+                height="200"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
             </div>
           </div>
         </div>
